@@ -44,8 +44,14 @@ LYNX="lynx -dump"
 # have one, then status and fullstatus will not work.
 STATUSURL="http://localhost:@PORT@/server-status"
 #
+# the command to increase the limit on open file descriptors
+ULIMIT_MAX_FILES="@APACHECTL_ULIMIT@"
 # --------------------                              --------------------
 # ||||||||||||||||||||   END CONFIGURATION SECTION  ||||||||||||||||||||
+
+if [ "x$ULIMIT_MAX_FILES" != "x" ] ; then
+    $ULIMIT_MAX_FILES
+fi
 
 ERROR=0
 if [ "x$ARGV" = "x" ] ; then 
